# Orientation-week-showcase-project

.github/: CODEOWNERS
.github/workflows/: arduino.yml
arduino/: arduino.ino
examples/rust/: Cargo.toml
examples/rust/src/: main.rs  serial.rs  startup.rs
